--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="stylesheet" href="/fonts.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clipweb</title>
+
+    <meta name="darkreader-lock" />
+    <meta name="color-scheme" content="dark" />
+
+    <title>clipweb (dreamland)</title>
   </head>
   <body>
     <div id="app"></div>
